auto-test/tests/chapter_18/invalid_types/initializers/initialize_struct_member_wrong_type.c
struct s {
    signed char *char_ptr;
};

int main(void) {
    
    
    struct s x = {"It's a string"};
    return 0;
}